# docs/swagger/swagger.json
@@ -8,9 +8,9 @@
         "version": "1.0"
     },
     "paths": {
-        "/do-something": {
-            "get": {
-                "description": "Does something incredible.",
+        "/signup": {
+            "post": {
+                "description": "Creates an account for a given email.",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,10 +18,19 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Something"
+                    "Accounts"
                 ],
-                "summary": "Does something",
+                "summary": "Creates an account",
                 "parameters": [
+                    {
+                        "description": "Body",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/accounts.CreateAccountRequest"
+                        }
+                    },
                     {
                         "type": "string",
                         "description": "Bearer Authorization Token",
@@ -31,10 +40,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/accounts.SomethingResponse"
+                            "$ref": "#/definitions/accounts.CreateAccountResponse"
                         },
                         "headers": {
                             "Token": {
@@ -51,10 +60,24 @@
         }
     },
     "definitions": {
-        "accounts.SomethingResponse": {
+        "accounts.CreateAccountRequest": {
             "type": "object",
             "properties": {
-                "something_id": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "accounts.CreateAccountResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
                     "type": "string"
                 }
             }
